--- a/1.html
+++ b/1.html
@@ -12,16 +12,66 @@
 
   gtag('config', 'UA-165432695-1');
 </script>
+<style>
+  body {
+    margin: 0;
+  }
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  h1 {
+    font-size: 60px;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    margin:0;
+    padding: 20px;
+  }
+  ol {
+    border-right: 1px solid gray;
+    width: 100px;
+    margin: 0;
+    padding: 20px;
+  }
+
+  #grid {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  #grid ol {
+    padding-left: 40px;
+  }
+  #article {
+    padding-left: 30px;
+  }
+
+  @media only screen and (max-width: 800px) {
+    #grid {
+      display: block;
+    }
+    ol {
+      border-right: none;
+    }
+    h1 {
+      border-bottom: none;
+    }
+    #grid ol {
+      background-color: lightblue;
+    }
+  }
+
+</style>
 
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-
+    <div id="article">
 <h2>HTML</h2>
 <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
          target="_blank" title="html5 specification">HTML</a>
@@ -37,5 +87,7 @@
   HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.
 </p>
   <img src="images/coding1.jpg" width="100%">
+</div>
+</div>
 </body>
 </html>
