--- a/2.html
+++ b/2.html
@@ -95,7 +95,7 @@
       element	             p	             Selects all p elements
       element,element,..	 div, p	         Selects all div elements and all p elements
       <br><br><br>
-      <img src="images/coding2.jpg" width="100%">
+      <img src="images/coding2.jpg" width="600px">
       </p>
     </div>
 </div>
