--- a/1.html
+++ b/1.html
@@ -86,7 +86,7 @@
   그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다.
   HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.
 </p>
-  <img src="images/coding1.jpg" width="100%">
+  <img src="images/coding1.jpg" width="600px">
 </div>
 </div>
 </body>
