--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </p>
   <img src="images/coding.jpg" width="600px">
   <p>
-    <iframe width="70%" src="https://www.youtube.com/embed/PVcpF7J2oXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="600px" height="450px" src="https://www.youtube.com/embed/PVcpF7J2oXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
   </div>
 </div>
