--- a/1.html
+++ b/1.html
@@ -3,64 +3,8 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta Charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165432695-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-165432695-1');
-</script>
-<style>
-  body {
-    margin: 0;
-  }
-  a {
-    color: black;
-    text-decoration: none;
-  }
-  h1 {
-    font-size: 60px;
-    text-align: center;
-    border-bottom: 1px solid gray;
-    margin:0;
-    padding: 20px;
-  }
-  ol {
-    border-right: 1px solid gray;
-    width: 100px;
-    margin: 0;
-    padding: 20px;
-  }
-
-  #grid {
-    display: grid;
-    grid-template-columns: 150px 1fr;
-  }
-  #grid ol {
-    padding-left: 40px;
-  }
-  #article {
-    padding-left: 30px;
-  }
-
-  @media only screen and (max-width: 800px) {
-    #grid {
-      display: block;
-    }
-    ol {
-      border-right: none;
-    }
-    h1 {
-      border-bottom: none;
-    }
-    #grid ol {
-      background-color: lightblue;
-    }
-  }
-
-</style>
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -70,6 +14,16 @@
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
+    <p>
+      <input id="btn1" type="button" value="night" onclick="
+        document.querySelector('body').style.backgroundColor='black';
+        document.querySelector('body').style.color='white';
+      ">
+      <input id="btn1" type="button" value="day" onclick="
+        document.querySelector('body').style.backgroundColor='white';
+        document.querySelector('body').style.color='black';
+      ">
+    </p>
   </ol>
     <div id="article">
 <h2>HTML</h2>
@@ -86,7 +40,7 @@
   그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다.
   HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.
 </p>
-  <img src="images/coding1.jpg" width="600px">
+  <img src="images/coding1.jpg" width="400px">
 </div>
 </div>
 </body>
