--- a/2.html
+++ b/2.html
@@ -3,72 +3,27 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta Charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165432695-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-165432695-1');
-</script>
-<style>
-  body {
-    margin: 0;
-  }
-  a {
-    color: black;
-    text-decoration: none;
-  }
-  h1 {
-    font-size: 60px;
-    text-align: center;
-    border-bottom: 1px solid gray;
-    margin:0;
-    padding: 20px;
-  }
-  ol {
-    border-right: 1px solid gray;
-    width: 100px;
-    margin: 0;
-    padding: 20px;
-  }
-
-  #grid {
-    display: grid;
-    grid-template-columns: 150px 1fr;
-  }
-  #grid ol {
-    padding-left: 40px;
-  }
-  #article {
-    padding-left: 30px;
-  }
-
-  @media only screen and (max-width: 800px) {
-    #grid {
-      display: block;
-    }
-    ol {
-      border-right: none;
-    }
-    h1 {
-      border-bottom: none;
-    }
-    #grid ol {
-      background-color: lightblue;
-    }
-  }
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
   <h1><a href="index.html">WEB</a></h1>
+
   <div id="grid">
     <ol>
       <li><a href="1.html">HTML</a></li>
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
+      <p>
+        <input id="btn1" type="button" value="night" onclick="
+          document.querySelector('body').style.backgroundColor='black';
+          document.querySelector('body').style.color='white';
+        ">
+        <input id="btn1" type="button" value="day" onclick="
+          document.querySelector('body').style.backgroundColor='white';
+          document.querySelector('body').style.color='black';
+        ">
+      </p>
     </ol>
     <div id="article">
       <!--
@@ -79,23 +34,23 @@
           <li><a href="3.html"><font color="red">JavaScript</font></a></li>
         </ol>
       -->
-      <h2 style="color:green">CSS</h2>
+      <h2>CSS</h2>
       <p>
         종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
 
       마크업 언어(ex. HTML)가 웹사이트의 몸체를 담당한다면 CSS는 옷과 액세서리 같은 꾸미는 역할을 담당한다고 할 수 있다. 즉, HTML 구조는 그대로 두고 CSS 파일만 변경해도 전혀 다른 웹사이트처럼 꾸밀 수 있다.
 
       현재 개발 중인 CSS3의 경우 그림자 효과, 그라데이션, 변형 등 그래픽 편집 프로그램으로 제작한 이미지를 대체할 수 있는 기능이 추가되었다. 또한 다양한 애니메이션 기능이 추가되어 어도비 플래시를 어느 정도 대체하고 있다.
-      <br><br>
+      <p>
       우선순위는 id선택자 > class선택자 > tag선택자
       <br>
-      .class	             .intro     	   Selects all elements with class="intro"
-      #id	                 #firstname	     Selects the element with id="firstname"
-      *	                   *	             Selects all elements
-      element	             p	             Selects all p elements
-      element,element,..	 div, p	         Selects all div elements and all p elements
-      <br><br><br>
-      <img src="images/coding2.jpg" width="600px">
+      <strong>.class</strong>	            <u>.intro</u>   	   Selects all elements with class="intro" <br>
+      <strong>#id</strong>		             <u>#firstname</u>	     Selects the element with id="firstname" <br>
+      <strong> * </strong>	               <u> * </u>             Selects all elements <br>
+      <strong>element</strong>		          <u>p</u>	             Selects all tag "p" elements <br>
+      <strong>element,element,..</strong>		<u>div, p</u>	         Selects all tag "div" elements and all p elements <br>
+    </p>
+      <img src="images/coding2.jpg" width="400px">
       </p>
     </div>
 </div>
