--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta Charset="utf-8">
 
 <link rel="stylesheet" href="style.css">
+<script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -14,16 +15,12 @@
       <li><a href="1.html">HTML</a></li>
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
-      <p>
-        <input id="btn1" type="button" value="night" onclick="
-          document.querySelector('body').style.backgroundColor='black';
-          document.querySelector('body').style.color='white';
-        ">
-        <input id="btn1" type="button" value="day" onclick="
-          document.querySelector('body').style.backgroundColor='white';
-          document.querySelector('body').style.color='black';
-        ">
-      </p>
+      <li><a href="freeboard.html">공지사항</a></li>
+      <li><a href="map.html">길찾기</a></li>
+      <br>
+          <input id="night_day2" type="button" value="night" onclick="
+            nightDayHandler(this);
+          ">
     </ol>
 
   <div id="article">
@@ -36,7 +33,42 @@
   그러나 1993년 이래로 웹은 인터넷 구조의 절대적 위치를 차지하고 있다.
   인터넷에서 HTTP 프로토콜, 하이퍼텍스트, HTML형식 등을 사용하여 그림과 문자를 교환하는 전송방식을 말하기도 한다.
   </p>
+  <p>
   <img src="images/coding.jpg" width="600px">
+</p>
+<div id="disqus_thread"></div>
+<script>
 
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-zmevq23u99.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5eaf4a35a1bad90e54a1516e/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
